211117|패캠 AWS 인프라구축과 devops
part2_AWS 기반의 소규모 & 중규모 아키텍트 설계
  01. AWS 기초와
        04_(VPC) 네트워킹의 동작원리1
        04_(VPC) 네트워킹의 동작원리2
	04_(VPC) 네트워킹의 동작원리3

        수정 - 01_(개요) 클라우드 컴퓨팅
        수정 - 02_(개요) AWS의 주요 서비스 소개
        수정 - 03_(개요) 네트워킹의 기본

--- a/devops/패스트캠퍼스/한번에 끝내는 AWS 인프라 구축과 devops 운영/Part2_AWS 기반의 소규모 & 중규모 아키텍트 설계/01_AWS 기초와 VPC/01_(개요) 클라우드 컴퓨팅.md
+++ b/devops/패스트캠퍼스/한번에 끝내는 AWS 인프라 구축과 devops 운영/Part2_AWS 기반의 소규모 & 중규모 아키텍트 설계/01_AWS 기초와 VPC/01_(개요) 클라우드 컴퓨팅.md
@@ -8,29 +8,30 @@
 
 
 
-*  클라우드 컴퓨팅 (Cloud Computing)
-  *  장점
-    *  언제 어디서든, 접근가능
-    *  원하면 언제든지 컴퓨터 자원을 늘릴 수 있음
-    *  사용한 만큼만 지불하면 된다 (사용량 기반 과금)
-    *  초기비용이 적게 든다
-    *  몇 분만에 전 세계에 서비스 런칭할 수 있다
-  
-  *  단점
-    *  관리를 위해선 고급 전문 지식이 필요
-    *  파악하기 힘든 너무나 광범위한 서비스
-  
+##### 클라우드 컴퓨팅 (Cloud Computing)
+
+*  장점
+  *  언제 어디서든, 접근가능
+  *  원하면 언제든지 컴퓨터 자원을 늘릴 수 있음
+  *  사용한 만큼만 지불하면 된다 (사용량 기반 과금)
+  *  초기비용이 적게 든다
+  *  몇 분만에 전 세계에 서비스 런칭할 수 있다
+
+*  단점
+  *  관리를 위해선 고급 전문 지식이 필요
+  *  파악하기 힘든 너무나 광범위한 서비스
 
 
 
 
 
-* 클라우드 컴퓨팅을 배워야 하는 이유
-  * 많이 쓰고, 많이 쓰게 될 것이다
-    * DevOps 를 실현하기에 가장 좋은 환경이 AWS
-      * 다양한 서비스를 사용할 수 있는 All-in-one 패키지
-    * 중소기업 -> 대기업
-      * 대기업들의 Digital Ttransformation 이 진행 중
-  * AI, Big Data
-    * Data Scientist or ML Engineer 보다 Cloud Computing 에 대한 수요와 니즈가 더 커짐
+##### 클라우드 컴퓨팅을 배워야 하는 이유
+
+* 많이 쓰고, 많이 쓰게 될 것이다
+  * DevOps 를 실현하기에 가장 좋은 환경이 AWS
+    * 다양한 서비스를 사용할 수 있는 All-in-one 패키지
+  * 중소기업 -> 대기업
+    * 대기업들의 Digital Ttransformation 이 진행 중
+* AI, Big Data
+  * Data Scientist or ML Engineer 보다 Cloud Computing 에 대한 수요와 니즈가 더 커짐
 
