--- a/devops/패스트캠퍼스/한번에 끝내는 AWS 인프라 구축과 devops 운영/Part2_AWS 기반의 소규모 & 중규모 아키텍트 설계/01_AWS 기초와 VPC/03_(개요) 네트워킹의 기본.md
+++ b/devops/패스트캠퍼스/한번에 끝내는 AWS 인프라 구축과 devops 운영/Part2_AWS 기반의 소규모 & 중규모 아키텍트 설계/01_AWS 기초와 VPC/03_(개요) 네트워킹의 기본.md
@@ -8,53 +8,54 @@
 
 
 
-* What is IP Address?
-  * 컴퓨터사이의 통신을 위해 컴퓨터의 위치값을 알아야 한다.
-  * 각 컴퓨터의 위치값(주소)을 IP 주소라고 칭한다
-    *  IPV4
-    * 0.0.0.0 ~ 255.255.255.255
-    * 각 숫자당 8bit
-    * 존재 할 수 있는 총 IP 개수는 2^32 개. 약 42억개
+##### What is IP Address?
+
+* 컴퓨터사이의 통신을 위해 컴퓨터의 위치값을 알아야 한다.
+* 각 컴퓨터의 위치값(주소)을 IP 주소라고 칭한다
+  *  IPV4
+  * 0.0.0.0 ~ 255.255.255.255
+  * 각 숫자당 8bit
+  * 존재 할 수 있는 총 IP 개수는 2^32 개. 약 42억개
 
 
 
-* IPV4 Classes
+##### IPV4 Classes
 
-  * 첫 번째 옥텟의 압자리 숫자들을 바탕으로 Class들을 구분
+* 첫 번째 옥텟의 압자리 숫자들을 바탕으로 Class들을 구분
 
-    * A Class 0------.X.X.X
+  * A Class 0------.X.X.X
 
-      * A Class 는 첫번째 옥텟까지 Network
-      * 1개의 네트워크가 2^24 개의 ip 를 보유
-        * Host bit 는 8 * 3 bit
-      * 네트워크는 2^7 개 존재
-        * Network bit 는 7bit
+    * A Class 는 첫번째 옥텟까지 Network
+    * 1개의 네트워크가 2^24 개의 ip 를 보유
+      * Host bit 는 8 * 3 bit
+    * 네트워크는 2^7 개 존재
+      * Network bit 는 7bit
 
-    * B Class 10-----.X.X.X
+  * B Class 10-----.X.X.X
 
-      * B Class 는 두번째 옥텟까지 Network
-      * 1개의 네트워크가 2^16 개의 ip 를 보유
-        * Host bit 는 8 * 2 bit
-      * 네트워크는 2^14 개 존재
-        * Network bit 는 7 * 2 bit
+    * B Class 는 두번째 옥텟까지 Network
+    * 1개의 네트워크가 2^16 개의 ip 를 보유
+      * Host bit 는 8 * 2 bit
+    * 네트워크는 2^14 개 존재
+      * Network bit 는 7 * 2 bit
 
-    * C Class 110----.X.X.X
+  * C Class 110----.X.X.X
 
-      * C Class 는 세번째 옥텟까지 Network
-      * 1개의 네트워크가 2^8 개의 ip 를 보유
-        * Host bit 는 8 bit
-      * 네트워크는 2^21 개 존재
-        * Network bit 는 7 * 2 bit
+    * C Class 는 세번째 옥텟까지 Network
+    * 1개의 네트워크가 2^8 개의 ip 를 보유
+      * Host bit 는 8 bit
+    * 네트워크는 2^21 개 존재
+      * Network bit 는 7 * 2 bit
 
-      
+    
 
 
 
-* Network 나누기 - CIDR
+##### Network 나누기 - CIDR
 
-  * Subnet
-    * Sub + Network
-    * IP 주소가 부족하기 때문에 분할해서 사용
+* Subnet
+  * Sub + Network
+  * IP 주소가 부족하기 때문에 분할해서 사용
 
 * 네트워크 분할 - 2개로 분할 A, B
 
